# meshcore-c

./: .clang-format  CMakeLists.txt  LICENSE  main.c
companion-radio-protocol/: mc_companion.c  mc_companion.h  mc_companion_command_parser.c  mc_companion_command_parser.h  mc_companion_serial_interface.c  mc_companion_serial_interface.h
companion-radio-protocol-test/: CMakeLists.txt  Makefile  client.c  server.c
meshcore/: packet.c
meshcore-test/: CMakeLists.txt  Makefile
meshcore/payload/: ack.c  advert.c  grp_txt.c  grp_txt.h  request.h
